Added Enpooint
- Added mark all as done endpoint
- Updated port
- Updated swagger docs
